Finally working with Jaeger all-in-one.

--- a/.env.base
+++ b/.env.base
@@ -1,4 +1,9 @@
 OTEL_SERVICE_NAME=test-api
 OTEL_RESOURCE_ATTRIBUTES=service.name=test-api
-OTEL_EXPORTER_OTLP_ENDPOINT=http://collector:4317
+OTEL_EXPORTER_OTLP_ENDPOINT=http://jaeger:4317
 OTEL_EXPORTER_OTLP_PROTOCOL=grpc
+OTEL_TRACES_EXPORTER=otlp
+OTEL_METRICS_EXPORTER=otlp
+OTEL_LOGS_EXPORTER=none
+OTEL_PYTHON_LOG_CORRELATION=true
+OTEL_PYTHON_LOGGING_AUTO_INSTRUMENTATION_ENABLED=true
