--- a/requirements.in
+++ b/requirements.in
@@ -1,10 +1,16 @@
 fastapi
+googleapis-common-protos~=1.52
+grpcio
 httpx
 opentelemetry-distro
 opentelemetry-exporter-otlp
+opentelemetry-exporter-otlp-proto-common
 opentelemetry-exporter-otlp-proto-grpc
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-logging
 opentelemetry-instrumentation-httpx
+opentelemetry-proto
 orjson
+pydantic
 python-json-logger
+uvicorn[standard]
